--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,29 @@ body {
   color: white;
   text-align: center;
 }
+
+.imagenubicacion {
+  height: 80vh;
+  background-image: url("../assets/img/imagen\ ubicacion.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-inline: 200px;
+}
+
+.imagencontacto {
+  height: 80vh;
+  background-image: url("../assets/img/imagen\ contacto.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-inline: 200px;
+}
